--- a/application/composer.json
+++ b/application/composer.json
@@ -11,6 +11,7 @@
   ],
   "require": {
     "php": "^7.4",
+    "ext-json": "*",
     "php-di/php-di": "^6.2",
     "slim/psr7": "^1.1",
     "slim/slim": "^4.5",
