feat: various improvements, features and optimizations in the application.
Signed-off-by: Vagner Cardoso <vagnercardosoweb@gmail.com>

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -70,10 +70,10 @@ RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local
 # Install xdebug
 RUN pecl install xdebug \
  && docker-php-ext-enable xdebug \
- && echo 'xdebug.remote_autostart=0' >> /usr/local/etc/php/conf.d/xdebug.ini \
- && echo 'xdebug.remote_enable=1' >> /usr/local/etc/php/conf.d/xdebug.ini \
- && echo 'xdebug.remote_host=host.docker.internal' >> /usr/local/etc/php/conf.d/xdebug.ini \
- && echo 'xdebug.remote_port=9000' >>  /usr/local/etc/php/conf.d/xdebug.ini \
+ && echo 'xdebug.start_with_request=no' >> /usr/local/etc/php/conf.d/xdebug.ini \
+ && echo 'xdebug.mode=debug' >> /usr/local/etc/php/conf.d/xdebug.ini \
+ && echo 'xdebug.client_host=host.docker.internal' >> /usr/local/etc/php/conf.d/xdebug.ini \
+ && echo 'xdebug.client_port=9000' >>  /usr/local/etc/php/conf.d/xdebug.ini \
  && echo 'xdebug.remote_cookie_expire_time=36000' >>  /usr/local/etc/php/conf.d/xdebug.ini
 
 # Install redis
