feat: php 8 in docker
Signed-off-by: Vagner Cardoso <vagnercardosoweb@gmail.com>

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -1,4 +1,4 @@
-FROM php:7.4-apache
+FROM php:8-apache
 
 # Timezone
 ENV TZ=America/Sao_Paulo
@@ -46,7 +46,6 @@ RUN docker-php-ext-configure gd --with-freetype --with-jpeg
 # Instala dependencias do php
 RUN docker-php-ext-install \
   -j$(nproc) gd \
-  json \
   iconv \
   bcmath \
   xml \
@@ -72,7 +71,7 @@ RUN pecl install xdebug \
  && docker-php-ext-enable xdebug \
  && echo 'xdebug.start_with_request=no' >> /usr/local/etc/php/conf.d/xdebug.ini \
  && echo 'xdebug.mode=debug' >> /usr/local/etc/php/conf.d/xdebug.ini \
- && echo 'xdebug.client_host=host.docker.internal' >> /usr/local/etc/php/conf.d/xdebug.ini \
+ && echo 'xdebug.client_host=127.0.0.1' >> /usr/local/etc/php/conf.d/xdebug.ini \
  && echo 'xdebug.client_port=9000' >>  /usr/local/etc/php/conf.d/xdebug.ini \
  && echo 'xdebug.remote_cookie_expire_time=36000' >>  /usr/local/etc/php/conf.d/xdebug.ini
 
