feat: support for custom routes and various improvements
Signed-off-by: Vagner Cardoso <vagnercardosoweb@gmail.com>

--- a/application/.env.example
+++ b/application/.env.example
@@ -1,2 +1,6 @@
 # Configuration app
-APP_ENV=development
+APP_ENV=production
+APP_LOCALE=pt_BR
+APP_TIMEZONE=America/Sao_Paulo
+APP_MAINTENANCE=false
+APP_ONLY_API=false
