feat: middleware generate secret keys
Signed-off-by: Vagner Cardoso <vagnercardosoweb@gmail.com>

--- a/application/.env.example
+++ b/application/.env.example
@@ -1,6 +1,11 @@
 # Configuration app
 APP_ENV=production
+APP_KEY=
 APP_LOCALE=pt_BR
 APP_TIMEZONE=America/Sao_Paulo
 APP_MAINTENANCE=false
 APP_ONLY_API=false
+
+# Secret keys
+API_SECRET_KEY=
+DEPLOY_SECRET_KEY=
