--- a/application/composer.json
+++ b/application/composer.json
@@ -11,6 +11,7 @@
   ],
   "require": {
     "php": "^8.0",
+    "illuminate/support": "^8.25",
     "php-di/php-di": "^6.3",
     "slim/psr7": "^1.3",
     "slim/slim": "^4.7",
