--- a/application/composer.json
+++ b/application/composer.json
@@ -25,7 +25,8 @@
     "vlucas/phpdotenv": "^5.3"
   },
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "^2.18"
+    "friendsofphp/php-cs-fixer": "^2.18",
+    "phpunit/phpunit": "^9.5"
   },
   "config": {
     "sort-packages": true,
