--- a/application/composer.json
+++ b/application/composer.json
@@ -16,6 +16,7 @@
   ],
   "require": {
     "php": "^8.0",
+    "ext-pdo": "*",
     "illuminate/support": "^8.25",
     "php-di/php-di": "^6.3",
     "slim/psr7": "^1.3",
@@ -36,11 +37,13 @@
   "autoload": {
     "psr-4": {
       "App\\": "app/",
-      "Core\\": "source/"
+      "Core\\": "source/",
+      "Tests\\": "tests/"
     }
   },
   "scripts": {
     "cs:fix": "php-cs-fixer fix ../ --config=.php_cs",
-    "cs:check": "php-cs-fixer fix ../ --dry-run --format=txt --verbose --diff --diff-format=udiff --config=.php_cs"
+    "cs:check": "php-cs-fixer fix ../ --dry-run --format=txt --verbose --diff --diff-format=udiff --config=.php_cs",
+    "test": "phpunit --configuration ./phpunit.xml"
   }
 }
