--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -71,7 +71,7 @@ RUN pecl install xdebug \
  && docker-php-ext-enable xdebug \
  && echo 'xdebug.start_with_request=no' >> /usr/local/etc/php/conf.d/xdebug.ini \
  && echo 'xdebug.mode=debug' >> /usr/local/etc/php/conf.d/xdebug.ini \
- && echo 'xdebug.client_host=127.0.0.1' >> /usr/local/etc/php/conf.d/xdebug.ini \
+ && echo 'xdebug.client_host=host.docker.internal' >> /usr/local/etc/php/conf.d/xdebug.ini \
  && echo 'xdebug.client_port=9000' >>  /usr/local/etc/php/conf.d/xdebug.ini \
  && echo 'xdebug.remote_cookie_expire_time=36000' >>  /usr/local/etc/php/conf.d/xdebug.ini
 
