--- a/application/composer.json
+++ b/application/composer.json
@@ -21,6 +21,7 @@
     "php-di/php-di": "^6.3",
     "slim/psr7": "^1.3",
     "slim/slim": "^4.7",
+    "symfony/console": "^5.2",
     "symfony/var-dumper": "^5.2",
     "twig/twig": "^3.2",
     "vlucas/phpdotenv": "^5.3"
