--- a/application/.env.example
+++ b/application/.env.example
@@ -1,6 +1,7 @@
 # Configuration app
 APP_ENV=production
 APP_KEY=
+APP_NAME="Slim 4 Skeleton"
 APP_LOCALE=pt_BR
 APP_TIMEZONE=America/Sao_Paulo
 APP_MAINTENANCE=false
