--- a/application/composer.json
+++ b/application/composer.json
@@ -18,6 +18,7 @@
     "php": "^8.0",
     "ext-pdo": "*",
     "illuminate/support": "^8.25",
+    "monolog/monolog": "^2.2",
     "php-di/php-di": "^6.3",
     "slim/psr7": "^1.3",
     "slim/slim": "^4.7",
