--- a/application/.env.example
+++ b/application/.env.example
@@ -10,3 +10,7 @@ APP_ONLY_API=false
 # Secret keys
 API_SECRET_KEY=
 DEPLOY_SECRET_KEY=
+
+# Password hashing
+PASSWORD_DEFAULT_DRIVER=argon2i
+PASSWORD_VERIFY_ALGORITHM=true
