--- a/application/composer.json
+++ b/application/composer.json
@@ -19,6 +19,7 @@
     "ext-pdo": "*",
     "ext-openssl": "*",
     "ext-simplexml": "*",
+    "ext-libxml": "*",
     "illuminate/support": "^8.25",
     "monolog/monolog": "^2.2",
     "php-di/php-di": "^6.3",
