--- a/application/composer.json
+++ b/application/composer.json
@@ -20,6 +20,7 @@
     "ext-openssl": "*",
     "ext-simplexml": "*",
     "ext-libxml": "*",
+    "ext-curl": "*",
     "illuminate/support": "^8.25",
     "monolog/monolog": "^2.2",
     "php-di/php-di": "^6.3",
@@ -28,7 +29,7 @@
     "symfony/console": "^5.2",
     "symfony/var-dumper": "^5.2",
     "twig/twig": "^3.2",
-    "vlucas/phpdotenv": "^5.3"
+    "vlucas/phpdotenv": "^5.3",
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.18",
