feat: adds support for database connections
Signed-off-by: Vagner Cardoso <vagnercardosoweb@gmail.com>

--- a/application/.env.example
+++ b/application/.env.example
@@ -14,3 +14,11 @@ DEPLOY_SECRET_KEY=
 # Password hashing
 PASSWORD_DEFAULT_DRIVER=argon2i
 PASSWORD_VERIFY_ALGORITHM=true
+
+# Database
+DB_DRIVER=mysql
+DB_HOST=mariadb
+DB_PORT=3306
+DB_USERNAME=root
+DB_PASSWORD=root
+DB_DATABASE=development
