--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 /**/.idea
-/**/.env
+/**/.env*
+!/**/.env.example
 /**/vendor
 /**/node_modules
 /**/.DS_Store
 /**/.php_cs.cache
 !/**/.env.example
+/**/resources/database/schema.sql
 
 # Docker
 /**/.docker/mysql/*
