refactor: várias melhorias no docker.
- Adiciona php 8 fpm
- Adiciona nginx (opcional)
- Adiciona httpd (opcional)

Signed-off-by: Vagner Cardoso <vagnercardosoweb@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -9,13 +9,15 @@
 /**/resources/database/schema.sql
 
 # Docker
-/**/.docker/mysql/*
-/**/.docker/postgres/*
-/**/.docker/apache/logs/*
-!/**/.docker/mysql/config
-!/**/.docker/mysql/database/.gitkeep
-!/**/.docker/postgres/.gitkeep
-!/**/.docker/apache/logs/.gitkeep
+/**/docker/mysql/*
+/**/docker/postgres/*
+/**/docker/apache/logs/*
+/**/docker/nginx/logs/*
+!/**/docker/mysql/config
+!/**/docker/mysql/database/.gitkeep
+!/**/docker/postgres/.gitkeep
+!/**/docker/apache/logs/.gitkeep
+!/**/docker/nginx/logs/.gitkeep
 
 # Cache
 /**/storage/cache/app/*
