--- a/docker/apache/localhost.conf
+++ b/docker/apache/localhost.conf
@@ -3,8 +3,17 @@
   ServerAlias www.localhost
   ServerAdmin webmaster@localhost
 
+  ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php:9000${DOCUMENT_ROOT}/
+
   DocumentRoot ${DOCUMENT_ROOT}
 
   ErrorLog ${APACHE_LOG_DIR}/error.log
   CustomLog ${APACHE_LOG_DIR}/access.log combined
+
+  <Directory ${DOCUMENT_ROOT}>
+    Options Indexes FollowSymLinks
+    AllowOverride All
+    Require all granted
+    DirectoryIndex index.php
+  </Directory>
 </VirtualHost>
