feat: add suporte phpmailer
Signed-off-by: Vagner Cardoso <vagnercardosoweb@gmail.com>

--- a/application/.env.example
+++ b/application/.env.example
@@ -22,3 +22,11 @@ DB_PORT=3306
 DB_USERNAME=root
 DB_PASSWORD=root
 DB_DATABASE=development
+
+# Mailer
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_FROM_MAIL=
+MAIL_FROM_NAME=
