--- a/application/composer.json
+++ b/application/composer.json
@@ -26,6 +26,7 @@
     "illuminate/support": "^8.25",
     "monolog/monolog": "^2.2",
     "php-di/php-di": "^6.3",
+    "phpmailer/phpmailer": "^6.3",
     "robmorgan/phinx": "^0.12.5",
     "slim/psr7": "^1.3",
     "slim/slim": "^4.7",
