--- a/docker/nginx/nginx.conf
+++ b/docker/nginx/nginx.conf
@@ -3,7 +3,9 @@ log_format compression '$remote_addr - $remote_user [$time_local] '
                        '"$http_referer" "$http_user_agent" "$gzip_ratio"';
 
 server {
-    listen 80;
+    listen 80 default_server;
+    listen [::]:80 default_server;
+
     root /home/app/public_html;
     index index.php index.html;
 
@@ -23,6 +25,11 @@ server {
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
 
+        proxy_http_version 1.1;
+        proxy_cache_bypass $http_upgrade;
+
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
