--- a/application/resources/assets/package.json
+++ b/application/resources/assets/package.json
@@ -44,6 +44,7 @@
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.2.1",
+    "swagger-ui": "^3.45.0"
   }
 }
