--- a/application/resources/assets/package.json
+++ b/application/resources/assets/package.json
@@ -25,10 +25,12 @@
     "file-loader": "^6.2.0",
     "mini-css-extract-plugin": "^1.3.9",
     "node-sass": "^5.0.0",
+    "postcss": "^8.2.8",
     "postcss-loader": "^5.2.0",
     "prettier": "^2.2.1",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
+    "tailwindcss": "^2.0.4",
     "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.0.18",
     "typescript": "^4.2.3",
