fix: proxy match do apache
Signed-off-by: Vagner Cardoso <vagnercardosoweb@gmail.com>

--- a/docker/apache/localhost.conf
+++ b/docker/apache/localhost.conf
@@ -3,7 +3,7 @@
   ServerAlias www.localhost
   ServerAdmin webmaster@localhost
 
-  ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php:9000${DOCUMENT_ROOT}/
+  ProxyPassMatch ^/(.*\.php(/.*)?)$ fcgi://php:9000${DOCUMENT_ROOT}/$1
 
   DocumentRoot ${DOCUMENT_ROOT}
 
