--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,38 +17,38 @@ services:
     ports:
       - '9000:9000'
     volumes:
-      - .:/home/app
+      - .:/home/app:z
 
-  #  nginx:
-  #    build: ./docker/nginx
-  #    container_name: slimphp-nginx
-  #    restart: always
-  #    tty: true
-  #    depends_on:
-  #      - php
-  #      - mariadb
-  #    ports:
-  #      - "80:80"
-  #      - "433:433"
-  #    volumes:
-  #      - .:/home/app
-  #    networks:
-  #      - slimphp-network
-
-  apache:
-    build: ./docker/apache
+  nginx:
+    build: ./docker/nginx
+    container_name: slimphp-nginx
     restart: always
-    container_name: slimphp-apache
-    networks:
-      - slimphp-network
+    tty: true
     depends_on:
       - php
       - mariadb
     ports:
-      - '80:80'
-      - '443:443'
+      - "80:80"
+      - "433:433"
     volumes:
-      - .:/home/app
+      - .:/home/app:z
+    networks:
+      - slimphp-network
+
+  #  apache:
+  #    build: ./docker/apache
+  #    restart: always
+  #    container_name: slimphp-apache
+  #    networks:
+  #      - slimphp-network
+  #    depends_on:
+  #      - php
+  #      - mariadb
+  #    ports:
+  #      - '80:80'
+  #      - '443:443'
+  #    volumes:
+  #      - .:/home/app:z
 
   mariadb:
     image: mariadb
@@ -60,8 +60,8 @@ services:
     ports:
       - '3306:3306'
     volumes:
-      - './docker/mysql/config/mariadb.cnf:/etc/mysql/conf.d/custom.cnf:ro'
-      - './docker/mysql/database:/var/lib/mysql'
+      - ./docker/mysql/config/mariadb.cnf:/etc/mysql/conf.d/custom.cnf:z
+      - ./docker/mysql/database:/var/lib/mysql:z
     environment:
       - MYSQL_PASSWORD=root
       - MYSQL_ROOT_PASSWORD=root
@@ -77,8 +77,8 @@ services:
   #    ports:
   #      - '3306:3306'
   #    volumes:
-  #      - './docker/mysql/config/mysql.cnf:/etc/mysql/conf.d/custom.cnf:ro'
-  #      - './docker/mysql/database:/var/lib/mysql'
+  #      - ./docker/mysql/config/mysql.cnf:/etc/mysql/conf.d/custom.cnf:z
+  #      - ./docker/mysql/database:/var/lib/mysql:z
   #    environment:
   #      - MYSQL_PASSWORD=root
   #      - MYSQL_ROOT_PASSWORD=root
@@ -112,7 +112,7 @@ services:
   #    ports:
   #      - '5432:5432'
   #    volumes:
-  #      - './docker/postgres:/var/lib/postgresql/data'
+  #      - ./docker/postgres:/var/lib/postgresql/data:z
   #    environment:
   #      - POSTGRES_USER=root
   #      - POSTGRES_PASSWORD=root
@@ -124,7 +124,7 @@ services:
   #    tty: true
   #    container_name: slimphp-redis
   #    volumes:
-  #      - ./docker/redis:/bitnami/redis/data
+  #      - ./docker/redis:/bitnami/redis/data:z
   #    networks:
   #      - slimphp-network
   #    environment:
