--- a/docker/nginx/Dockerfile
+++ b/docker/nginx/Dockerfile
@@ -1,9 +1,13 @@
 FROM nginx:1.19.7-alpine
 
-WORKDIR /home/app
-
+# Environements
+ENV WORKDIR=/home/app
 ENV TZ=America/Sao_Paulo
 
 RUN apk add --update --no-cache tzdata
 
+# Copy files to container
+COPY ./certs /etc/certs
 COPY ./nginx.conf /etc/nginx/conf.d/default.conf
+
+WORKDIR ${WORKDIR}
