refactor: melhorias no docker para melhor segurança
Signed-off-by: Vagner Cardoso <vagnercardosoweb@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -11,14 +11,14 @@
 # Docker
 /**/docker/redis/*
 /**/docker/mysql/*
-/**/docker/apache/logs/*
 /**/docker/postgres/*
-/**/docker/nginx/logs/*
+/**/docker/server/logs/*
+/**/docker/server/cache/*
 !/**/docker/mysql/config
 !/**/docker/mysql/database/.gitkeep
 !/**/docker/postgres/.gitkeep
-!/**/docker/apache/logs/.gitkeep
-!/**/docker/nginx/logs/.gitkeep
+!/**/docker/server/logs/.gitkeep
+!/**/docker/server/cache/.gitkeep
 !/**/docker/redis/.gitkeep
 
 # Cache
