--- a/docker/server/etc/nginx/conf.d/localhost.conf
+++ b/docker/server/etc/nginx/conf.d/localhost.conf
@@ -11,10 +11,11 @@ server {
     listen 80 default_server;
     listen [::]:80 default_server;
 
-    root /home/app/public_html;
+    root /var/www/app.dev/public_html;
     index index.php index.html;
 
-    server_name localhost www.localhost;
+    server_name localhost;
+    server_tokens off;
 
     # Specify a charset
     charset utf-8;
@@ -54,9 +55,6 @@ server {
 
     keepalive_timeout 60;
 
-    access_log /home/app/docker/nginx/logs/access.log compression;
-    error_log /home/app/docker/nginx/logs/error.log;
-
     location ~ \.php$ {
         try_files $uri =404;
 
@@ -68,7 +66,7 @@ server {
         fastcgi_ignore_headers Cache-Control Expires Set-Cookie;
 
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass php:9000;
+        fastcgi_pass unix:/run/php-fpm/www.sock;
         fastcgi_index index.php;
 
         fastcgi_buffer_size 128k;
