feat: atualiza assets e adiciona service worker
Signed-off-by: Vagner Cardoso <vagnercardosoweb@gmail.com>

--- a/public_html/manifest.json
+++ b/public_html/manifest.json
@@ -1,6 +1,7 @@
 {
   "name": "Slim4 Skeleton",
   "short_name": "Slim4 Skeleton",
+  "description": "Slim4 Skeleton",
   "theme_color": "#ffffff",
   "background_color": "#ffffff",
   "display": "standalone",
