--- a/application/resources/assets/package.json
+++ b/application/resources/assets/package.json
@@ -36,7 +36,8 @@
     "typescript": "^4.2.3",
     "webpack": "^5.25.0",
     "webpack-cli": "^4.5.0",
-    "webpack-dev-server": "^3.11.2"
+    "webpack-dev-server": "^3.11.2",
+    "workbox-webpack-plugin": "^6.1.5"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.3",
