feat: adiciona redis e sistema de cache pelo redis e por arquivo
Signed-off-by: Vagner Cardoso <vagnercardosoweb@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -22,10 +22,10 @@
 !/**/docker/redis/.gitkeep
 
 # Cache
-/**/storage/cache/app/*
+/**/storage/cache/server/*
 /**/storage/cache/twig/*
 /**/storage/cache/container/*
-!/**/storage/cache/app/.gitkeep
+!/**/storage/cache/server/.gitkeep
 !/**/storage/cache/twig/.gitkeep
 !/**/storage/cache/container/.gitkeep
 
