--- a/application/.env.example
+++ b/application/.env.example
@@ -30,3 +30,12 @@ MAIL_USERNAME=
 MAIL_PASSWORD=
 MAIL_FROM_MAIL=
 MAIL_FROM_NAME=
+
+# Redis
+REDIS_URL=
+REDIS_HOST=redis
+REDIS_PORT=6379
+REDIS_PASSWORD=root
+REDIS_SCHEMA=tcp
+REDIS_DATABASE=0
+REDIS_DATABASE_CACHE=1
