--- a/application/composer.json
+++ b/application/composer.json
@@ -26,17 +26,18 @@
     "illuminate/support": "^8.25",
     "monolog/monolog": "^2.2",
     "php-di/php-di": "^6.3",
-    "phpmailer/phpmailer": "^6.3",
-    "robmorgan/phinx": "^0.12.5",
+    "phpmailer/phpmailer": "^6.4",
+    "robmorgan/phinx": "^0.12",
     "slim/psr7": "^1.3",
     "slim/slim": "^4.7",
     "symfony/console": "^5.2",
     "symfony/var-dumper": "^5.2",
-    "twig/twig": "^3.2",
-    "vlucas/phpdotenv": "^5.3"
+    "twig/twig": "^3.3",
+    "vlucas/phpdotenv": "^5.3",
+    "predis/predis": "^1.1"
   },
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "^2.18",
+    "friendsofphp/php-cs-fixer": "^2.19",
     "phpunit/phpunit": "^9.5"
   },
   "config": {
