--- a/docker/server/etc/nginx/nginx.conf
+++ b/docker/server/etc/nginx/nginx.conf
@@ -6,7 +6,7 @@ user nginx;
 worker_processes auto;
 error_log /dev/stderr;
 pid /run/nginx.pid;
-daemon on;
+#daemon off;
 
 # Load dynamic modules. See /usr/share/doc/nginx/README.dynamic.
 include /usr/share/nginx/modules/*.conf;
