feat: melhorias nos erros e suporte para retornar o erro por template
Signed-off-by: Vagner Cardoso <vagnercardosoweb@gmail.com>

--- a/application/.env.example
+++ b/application/.env.example
@@ -6,6 +6,7 @@ APP_LOCALE=pt_BR
 APP_TIMEZONE=America/Sao_Paulo
 APP_MAINTENANCE=false
 APP_ONLY_API=false
+APP_RESPONSE_ERROR_JSON=false
 
 # Secret keys
 API_SECRET_KEY=
