feat: add support "argon2i and argon2id" and improvement constructor controller
Signed-off-by: Vagner Cardoso <vagnercardosoweb@gmail.com>

--- a/docker/server/Dockerfile
+++ b/docker/server/Dockerfile
@@ -51,6 +51,7 @@ RUN yum install -y \
     php-zip \
     php-mysqli \
     php-xml \
+    php-sodium \
     php-gd && \
     rm -rf /var/cache/apk/*
 
