--- a/application/.env.example
+++ b/application/.env.example
@@ -1,12 +1,15 @@
-# Configuration app
-APP_ENV=production
+# App
+APP_ENV=development
 APP_KEY=
 APP_NAME="Slim 4 Skeleton"
 APP_LOCALE=pt_BR
 APP_TIMEZONE=UTC
 APP_MAINTENANCE=false
-APP_SESSION_ENABLED=false
+APP_SESSION_ENABLED=true
 APP_ONLY_API=false
+
+# Others
+REDACTED_KEYS=email,password
 
 # Secret keys
 API_SECRET_KEY=
