--- a/application/resources/assets/package.json
+++ b/application/resources/assets/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "slim4-skeleton-webpack",
+  "name": "assets",
   "version": "1.0.0",
-  "license": "MIT",
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack --watch",
     "build": "cross-env NODE_ENV=production webpack",
@@ -12,43 +11,43 @@
     "lint:prettier": "npx prettier --write ./src"
   },
   "devDependencies": {
-    "@babel/core": "7.21.0",
-    "@babel/plugin-transform-typescript": "7.21.0",
-    "@babel/preset-env": "7.20.2",
-    "@babel/preset-react": "7.18.6",
-    "@types/jquery": "3.5.16",
-    "@types/jquery-mask-plugin": "1.14.4",
-    "@types/react": "18.0.28",
-    "@types/react-dom": "18.0.11",
-    "@types/swagger-ui": "3.52.0",
-    "autoprefixer": "10.4.13",
-    "babel-loader": "9.1.2",
+    "@babel/core": "7.23.3",
+    "@babel/plugin-transform-typescript": "7.23.3",
+    "@babel/preset-env": "7.23.3",
+    "@babel/preset-react": "7.23.3",
+    "@types/jquery": "3.5.27",
+    "@types/jquery-mask-plugin": "1.14.6",
+    "@types/react": "18.2.37",
+    "@types/react-dom": "18.2.15",
+    "@types/swagger-ui": "3.52.4",
+    "autoprefixer": "10.4.16",
+    "babel-loader": "9.1.3",
     "clean-webpack-plugin": "4.0.0",
     "cross-env": "7.0.3",
     "css-loader": "5.2.7",
-    "css-minimizer-webpack-plugin": "4.2.2",
+    "css-minimizer-webpack-plugin": "5.0.1",
     "file-loader": "6.2.0",
-    "mini-css-extract-plugin": "2.7.2",
-    "node-sass": "8.0.0",
-    "postcss": "8.4.21",
-    "postcss-loader": "7.0.2",
-    "prettier": "2.8.4",
-    "sass-loader": "13.2.0",
-    "style-loader": "3.3.1",
-    "tailwindcss": "3.2.7",
-    "terser-webpack-plugin": "5.3.6",
-    "ts-loader": "9.4.2",
-    "typescript": "4.9.5",
-    "webpack": "5.75.0",
-    "webpack-cli": "5.0.1",
-    "webpack-dev-server": "4.11.1"
+    "mini-css-extract-plugin": "2.7.6",
+    "node-sass": "9.0.0",
+    "postcss": "8.4.31",
+    "postcss-loader": "7.3.3",
+    "prettier": "3.0.3",
+    "sass-loader": "13.3.2",
+    "style-loader": "3.3.3",
+    "tailwindcss": "3.3.5",
+    "terser-webpack-plugin": "5.3.9",
+    "ts-loader": "9.5.0",
+    "typescript": "5.2.2",
+    "webpack": "5.89.0",
+    "webpack-cli": "5.1.4",
+    "webpack-dev-server": "4.15.1"
   },
   "dependencies": {
-    "jquery": "3.6.3",
+    "jquery": "3.7.1",
     "jquery-mask-plugin": "1.14.16",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "5.3.6",
-    "swagger-ui": "4.1.3"
+    "styled-components": "6.1.1",
+    "swagger-ui": "5.9.3"
   }
 }
