--- a/application/resources/assets/tsconfig.json
+++ b/application/resources/assets/tsconfig.json
@@ -2,12 +2,7 @@
   "compilerOptions": {
     "target": "es6",
     "module": "ES6",
-    "lib": [
-      "dom",
-      "es6",
-      "es2017",
-      "esnext.asynciterable"
-    ],
+    "lib": ["dom", "es6", "es2017", "esnext.asynciterable"],
     "sourceMap": false,
     "moduleResolution": "node",
     "removeComments": true,
@@ -29,10 +24,6 @@
     "rootDir": "./src",
     "jsx": "react"
   },
-  "include": [
-    "./src"
-  ],
-  "exclude": [
-    "node_modules"
-  ]
+  "include": ["./src"],
+  "exclude": ["node_modules"]
 }
