--- a/public_html/manifest.json
+++ b/public_html/manifest.json
@@ -9,6 +9,12 @@
   "start_url": "/",
   "lang": "pt-BR",
   "orientation": "any",
+  "related_applications": [
+    {
+      "platform": "web",
+      "url": "https://vagnercardosoweb.com.br"
+    }
+  ],
   "icons": [
     {
       "src": "/assets/icons/icon-16x16.png",
